src/test/resources/validation/error/unknownInputFieldReferenceTable/schema.graphqls
input Dummy {
  id: ID @reference(references: {table: "UNKNOWN_TABLE"})
}
